--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -25,3 +25,12 @@
   font-weight: 400;
   src: url("/fonts/AdobeClean-Light.ttf") format("truetype")
 }
+
+@font-face {
+  font-family: 'Title-Font';
+  src: url('/esports/static/assets/fonts/Ferrari-SansMedium.woff') format('woff');
+  font-weight:  400;
+  font-style:   normal;
+  font-display: fallback;
+  font-stretch: normal;
+}
