--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,7 +152,7 @@ h1 {
   text-shadow: 1px 1px 2px #000;
 }
 
-.article h1 {
+.ferrari h1 {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
@@ -163,6 +163,7 @@ h1 {
   letter-spacing: normal;
   font-size: 36px;
   line-height: 1.2em;
+  text-shadow: initial;
 }
 
 h2 {
