--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -34,3 +34,12 @@
   font-display: fallback;
   font-stretch: normal;
 }
+
+@font-face {
+  font-family: 'Body-Font';
+  src: url('/fonts/Ferrari-SansRegular.woff') format('woff');
+  font-weight:  400;
+  font-style:   normal;
+  font-display: fallback;
+  font-stretch: normal;
+}
