--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,12 @@ h2 {
   font-size: var(--heading-font-size-l);
 }
 
+.ferrari h2 {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
 h3 {
   font-size: var(--heading-font-size-l);
   padding: var(--h3-padding);
